--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,159 @@
-*{-webkit-box-sizing:border-box;box-sizing:border-box;padding:0;margin:0}body,html{margin:0}body{font-family:'Nunito', sans-serif}.wrap{max-width:1400px;margin:0 auto}#nav-container>nav>ul{list-style-type:none}.header-container{background-color:white;border-bottom:1px solid #ddd}#nav-background{top:0;z-index:9000;width:100%}#nav-container{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;margin:0 auto;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between}#nav-header{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}#nav-logo{color:#444;text-decoration:none}#nav-logo:hover{color:#666}.nav-ul{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-width:700px}.nav-ul>li{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}.nav-link{-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;color:#444;text-decoration:none;font-weight:600;font-size:1.2rem;-webkit-transition:200ms;-o-transition:200ms;transition:200ms}.nav-link:hover{background-color:#f1f1f1}.active-link{background-color:#f1f1f1}@media screen and (max-width:700px){#nav-container{-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;text-align:center}#nav-menu-button{padding:1rem;background-color:#f1f1f1;cursor:pointer}.nav-ul{display:block;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;overflow:auto;direction:rtl;-webkit-transition:max-height 400ms;-o-transition:max-height 400ms;transition:max-height 400ms;max-height:80vh}.hide-ul{max-height:0}.nav-link{padding:1rem 0;font-size:1.3rem;border-bottom:1px solid #f4f4f4}}@media screen and (min-width:701px){#nav-menu-button{display:none}.nav-link{-ms-flex-preferred-size:auto;flex-basis:auto;padding:1rem 1.5rem}}@media screen and (max-width:1040px){#nav-logo{margin-left:1rem}}
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html, body {
+  margin: 0;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+}
+
+.wrap {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+/* header */
+#nav-container > nav > ul {
+  list-style-type: none;
+}
+
+/* NAVIGATION */
+.header-container {
+  background-color: white;
+  border-bottom: 1px solid #ddd;
+}
+
+#nav-background {
+  top: 0;
+  z-index: 9000;
+  width: 100%;
+}
+
+#nav-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 auto;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+#nav-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+#nav-logo {
+  color: #444;
+  text-decoration: none;
+}
+
+#nav-logo:hover {
+  color: #666;
+}
+
+.nav-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 700px;
+}
+
+.nav-ul > li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.nav-link {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  color: #444;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1.2rem;
+  -webkit-transition: 200ms;
+  transition: 200ms;
+}
+
+.nav-link:hover {
+  background-color: #f1f1f1;
+}
+
+.active-link {
+  background-color: #f1f1f1;
+}
+
+/* END NAVIGATION */
+/* END DESKTOP MENU */
+/* MOBILE MENU */
+@media screen and (max-width: 700px) {
+  #nav-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+  }
+  #nav-menu-button {
+    padding: 1rem;
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
+  .nav-ul {
+    display: block;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    overflow: auto;
+    direction: rtl;
+    -webkit-transition: max-height 400ms;
+    transition: max-height 400ms;
+    max-height: 80vh;
+  }
+  .hide-ul {
+    max-height: 0;
+  }
+  .nav-link {
+    padding: 1rem 0;
+    font-size: 1.3rem;
+    border-bottom: 1px solid #f4f4f4;
+  }
+}
+
+/* END MOBILE MENU */
+/* DESKTOP MENU */
+@media screen and (min-width: 701px) {
+  #nav-menu-button {
+    display: none;
+  }
+  .nav-link {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    padding: 1rem 1.5rem;
+  }
+}
+
+/* This moves the logo so that it's not touching the left side */
+@media screen and (max-width: 1040px) {
+  #nav-logo {
+    margin-left: 1rem;
+  }
+}
+/*# sourceMappingURL=main.css.map */
