--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,8 @@ $footerMainBg: rgba(44, 62, 80,1.0);
 $footerCreditsBg: rgba(47, 54, 64,1.0);
 $main-link-color: rgba(0, 168, 255,1.0);
 $main-link-hover: rgba(0, 151, 230,1.0);
+$header-a-bg: #3498db;
+$header-a-hover: #2980b9;
 $header-link-color: rgba(220, 221, 225,1.0);
 $header-link-hover: rgba(245, 246, 250,1.0);
 $footer-link-color: rgba(127, 143, 166,1.0);
@@ -29,6 +31,7 @@ html, body {
 }
 body {
   font-family: 'Nunito', sans-serif;
+  font-size: 16px;
 }
 .wrap{
   max-width: $wrap-width;
@@ -37,101 +40,37 @@ body {
 
 // Site header
 
-/* header */
-
-#nav-container > nav > ul {
-  list-style-type: none;
-}
-
-/* NAVIGATION */
-
-.header-container {
-  background-color: white;
-  border-bottom: 1px solid #ddd;
-}
-#nav-background {
-  top: 0;
-  z-index: 9000;
-  width: 100%;
-}
-
-#nav-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
+nav.site-header{
   display: flex;
-  margin: 0 auto;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-}
-
-#nav-header {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+  .site-logo{
+    max-width: 200px;
+    img{
+      display: flex;
+    align-items: center;
+      width: 100%;
+    }
+  }
+  ul.head-navigation{
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    a {
+      padding: 2.5px 20px;
+      margin: 0 5px;
+      background-color: $header-a-bg;
+      color: $button-text-color;
+      text-decoration: none;
+      &:hover{
+        background-color: $header-a-hover;
+      }
+    }
+
+  }
 }
-
-#nav-logo {
-  color: #444;
-  text-decoration: none;
-}
-#nav-logo:hover {
-  color: #666;
-}
-
-.nav-ul {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 700px;
-}
-
-.nav-ul > li {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.nav-link {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  color: #444;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 1.2rem;
-  -webkit-transition: 200ms;
-  transition: 200ms;
-}
-
-.nav-link:hover {
-  background-color: #f1f1f1;
-}
-
-.active-link {
-  background-color: #f1f1f1;
-}
-
-/* END NAVIGATION */
-
-
-
-/* END DESKTOP MENU */
-
 
 // Site content
 
@@ -139,65 +78,3 @@ body {
 
 // Media Queries
 
-/* MOBILE MENU */
-@media screen and (max-width: 700px) {
-
-  #nav-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    text-align: center;
-  }
-
-  #nav-menu-button {
-    padding: 1rem;
-    background-color: #f1f1f1;
-    cursor: pointer;
-  }
-
-  .nav-ul {
-    display: block;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    overflow: auto;
-    direction: rtl;
-    transition: max-height 400ms;
-    max-height: 80vh;
-  }
-
-  .hide-ul {
-    max-height: 0;
-  }
-
-  .nav-link {
-    padding: 1rem 0;
-    font-size: 1.3rem;
-    border-bottom: 1px solid #f4f4f4;
-  }
-}
-/* END MOBILE MENU */
-
-/* DESKTOP MENU */
-@media screen and (min-width: 701px) {
-
-  #nav-menu-button {
-    display: none;
-  }
-
-  .nav-link {
-    flex-basis: auto;
-    padding: 1rem 1.5rem;
-  }
-}
-
-/* This moves the logo so that it's not touching the left side */
-@media screen and (max-width: 1040px) {
-  #nav-logo {
-    margin-left: 1rem;
-  }
-}
