--- a/css/main.scss
+++ b/css/main.scss
@@ -54,27 +54,90 @@ nav.site-header{
       width: 100%;
     }
   }
-  ul.head-navigation{
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-    a {
-      padding: 2.5px 20px;
-      margin: 0 5px;
-      background-color: $header-a-bg;
-      color: $button-text-color;
-      text-decoration: none;
-      &:hover{
-        background-color: $header-a-hover;
-      }
+}
+.head-navigation{
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  font-weight: 700;
+  a {
+    padding: 2.5px 20px;
+    margin: 0 5px;
+    color: $button-bg;
+    text-decoration: none;
+    &:hover{
+      color: $footerCreditsBg;
     }
-
   }
+
 }
 
+.menu-toggle-button {
+  display: none;
+  .menu-line{
+    height: 3px;
+    width: 25px;
+    margin: 3px 0;
+    background-color: $button-bg;
+  }
+}
 // Site content
 
 // Site Footer
 
 // Media Queries
 
+@media (max-width: 767px) {
+
+  .site-header {
+    flex-wrap: wrap;
+    .site-logo{
+      width: 90%;
+    }
+    .menu-toggle-button{
+      width: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    }
+    .menu-toggle-button,
+    .site-logo {
+      padding: 0 2vw;
+    }
+  }
+
+  .menu-toggle-button {
+    display: block;
+    cursor: pointer;
+  }
+  .head-navigation {
+    display: none;
+  }
+  .head-navigation.isActive{
+    display: flex;
+    flex-direction: column;
+    min-width: 100%;
+    align-items: center;
+    a, li {
+      display: flex;
+      min-width: 100%;
+      align-items: center;
+      justify-content:center;
+      
+    }
+    a{
+      background-color: $button-bg;
+      color: $button-text-color;
+      font-weight: normal;
+      height: 15vh;
+      padding: 10px 20px;
+      margin: 0px;
+      border-bottom: 1px solid rgba(0, 0,0,0.1);
+      &:hover{
+        background-color: $button-hover;
+        color: $button-text-color;
+      }
+    }
+  }
+
+}
