Structural Data Added

--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,19 @@ body {
   font-size: 16px;
 }
 
+img {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .wrap {
-  max-width: 1400px;
+  max-width: 1000px;
   margin: 0 auto;
+}
+
+.header-container {
+  border-bottom: 1px solid #ddd;
 }
 
 nav.site-header {
@@ -30,7 +40,6 @@ nav.site-header {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  border-bottom: 1px solid #ddd;
 }
 
 nav.site-header .site-logo {
@@ -77,6 +86,14 @@ nav.site-header .site-logo img {
   width: 25px;
   margin: 3px 0;
   background-color: #00a8ff;
+}
+
+.flexbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (max-width: 767px) {
@@ -140,7 +157,7 @@ nav.site-header .site-logo img {
     background-color: #00a8ff;
     color: #f5f6fa;
     font-weight: normal;
-    height: 15vh;
+    height: 5.5 vh;
     padding: 10px 20px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
