--- a/css/main.css
+++ b/css/main.css
@@ -114,10 +114,12 @@ nav.site-header .site-logo img {
   max-width: 45%;
   padding: 1rem;
   margin: 1rem;
-  -webkit-box-shadow: 0px 7px 14px 0px rgba(151, 160, 204, 0.12);
-          box-shadow: 0px 7px 14px 0px rgba(151, 160, 204, 0.12);
-  background-color: #fff;
   border-radius: 12px;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  -webkit-box-shadow: 0px 15px 45px -9px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 15px 45px -9px rgba(0, 0, 0, 0.2);
+  background-color: white;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
